# cli_rust

./: README.md
.github/workflows/: rust.yml
cat_r/: Cargo.toml
cat_r/src/: lib.rs  utils.rs
cat_r/tests/: cli.rs
echo/: Cargo.toml
echo/src/: main.rs
headr/: Cargo.toml
headr/src/: lib.rs
wc/: Cargo.toml
wc/src/: lib.rs
