[package]
name = "cat_r"
version = "0.1.0"
edition = "2021"


[lib]
name = "catr"
path = "src/lib.rs"

[[bin]]
name = "cat"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
anyhow = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
pretty_assertions = "1.4.0"
