[package]
name = "headr"
version = "0.1.0"
author = "musroom <mushroom020@proton.me>"
about = "head command clone written in rust"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.14"
rand = "0.8.5"
predicates = "3.1.0"
pretty_assertions = "1.4.0"

[lib]
name = "headr"
path = "src/lib.rs"


[[bin]]
name = "headr"
path = "src/bin/main.rs"
